--- a/usr/var/www/callblocker/index.html
+++ b/usr/var/www/callblocker/index.html
@@ -10,7 +10,7 @@
   <script type="text/javascript">
     var dojoConfig = {
       async: true,
-      baseUrl: "javascript/",
+      baseUrl: "js/vendor/",
       tlmSiblingOfDojo: false,
       packages: [
         { name: "dojo",  location: "dojo" },
@@ -20,11 +20,10 @@
     };
   </script>
   <!-- dojo bootstrap script -->
-  <script src="javascript/dojo/dojo.js"></script>
+  <script src="js/vendor/dojo/dojo.js"></script>
   <!-- other scripts -->
   <script src="js/app.js"></script>
 </head>
 <body class="soria">
 </body>
 </html>
-
