#43 add webpack support

--- a/usr/var/www/callblocker/index.html
+++ b/usr/var/www/callblocker/index.html
@@ -3,26 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <title>callblocker UI</title>
-
-  <link rel="stylesheet" type="text/css" href="app.css">
-
-  <!-- dojo configuration options -->
-  <script type="text/javascript">
-    var dojoConfig = {
-      async: true,
-      baseUrl: "js/vendor/",
-      tlmSiblingOfDojo: false,
-      packages: [
-        { name: "dojo",  location: "dojo" },
-        { name: "dijit", location: "dijit" },
-        { name: "dojox", location: "dojox" }
-      ]
-    };
-  </script>
-  <!-- dojo bootstrap script -->
-  <script src="js/vendor/dojo/dojo.js"></script>
-  <!-- other scripts -->
-  <script src="js/app.js"></script>
+  <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
 </head>
 <body class="soria">
 </body>
