#40 align javascript to 'Create React App'

--- a/usr/var/www/callblocker/public/index.html
+++ b/usr/var/www/callblocker/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <title>callblocker UI</title>
-  <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
+  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </head>
 <body class="soria">
 </body>
